# SkyRL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  project-summary.md
.gemini/: config.yaml
.github/workflows/: cpu_skyrl_tx.yaml  gpu_ci.yaml  gpu_ci_megatron.yaml  gpu_e2e_ci_fully_async.yaml  gpu_e2e_ci_megatron.yaml  gpu_skyrl_tx.yaml
claude/: project-summary.md  rl-loop-verify.md  tinker-skyrl-quickstart.md
docker/: Dockerfile  Dockerfile.megatron  Dockerfile.ray244
docs/: .gitignore  README.md  package-lock.json  package.json
docs/app/: global.css
docs/content/docs/: index.mdx  meta.json
docs/lib/: layout.shared.tsx  sort-tree.ts
skyagent/examples/run_verl/: verl_trainer.py
skyrl-agent/: .env.example  .gitignore  README.md  pyproject.toml
skyrl-agent/examples/run_openai/: openai_react.yaml  run_openai_react.py
skyrl-agent/examples/run_skyrl/: run_skyrl_oh.py  skyrl_oh.sh  skyrl_oh.yaml  skyrl_web_research_hle.sh  skyrl_web_research_hle.yaml
skyrl-agent/examples/run_verl/: README.md  verl_oh.sh  verl_oh.yaml  verl_reasoning.sh  verl_reasoning.yaml  verl_web_research_hle.sh  verl_web_research_hle.yaml
skyrl-agent/services/: router_simple.py  run_router.sh  test_remote_services.py
skyrl-agent/skyrl_agent/: __init__.py  auto.py
skyrl-agent/skyrl_agent/agents/: __init__.py  base.py  mapping.py
skyrl-agent/skyrl_agent/config/: configuration_utils.py
skyrl-agent/skyrl_agent/dispatcher/: async_utils.py  dispatchers.py
skyrl-agent/skyrl_agent/functional/: chat_template.py  function_calling.py  functions.py
skyrl-agent/skyrl_agent/integrations/: __init__.py  base.py  openai.py
skyrl-agent/skyrl_agent/tasks/: web_research_task.py
skyrl-agent/skyrl_agent/tools/: __init__.py  base.py  cache.py  finish.py  prompt.py  sandbox_fusion.py  search_engine.py  web_browser.py
skyrl-agent/tests/: test_openai_backend.py  test_openai_oh.py  test_openai_oh.yaml  test_web_research_hle.py  web_research_test.yaml
skyrl-agent/tests/dispatcher/: test_fixedpool.py
skyrl-agent/tests/react_task_tests/: no_tool.yaml  react_finish_only.yaml  react_interpreter.yaml  test.py  test_sandbox_endpoint.py  test_stem.py
skyrl-gym/: README.md
skyrl-gym/skyrl_gym/: core.py  metrics.py
skyrl-gym/skyrl_gym/envs/: __init__.py  base_text_env.py  registration.py
skyrl-gym/skyrl_gym/tools/: sql.py
skyrl-train/: README.md  pyproject.toml  ray_pg_test.py  s3_upload.py
skyrl-train/ci/: anyscale_gpu_ci.yaml  anyscale_gpu_ci_megatron.yaml  anyscale_gpu_e2e_test.yaml  anyscale_gpu_e2e_test_megatron.yaml  gpu_ci_run.sh  gpu_ci_run_megatron.sh  gpu_e2e_test_run_fully_async.sh  gpu_e2e_test_run_megatron.sh
skyrl-train/docs/: index.rst
skyrl-train/docs/algorithms/: custom_algorithms.rst
skyrl-train/docs/api/: env_vars.rst
skyrl-train/docs/checkpointing-logging/: checkpointing.rst
skyrl-train/docs/configuration/: config.rst
skyrl-train/docs/datasets/: dataset-preparation.rst
skyrl-train/docs/examples/: flash_rl.rst  lora.rst  megatron.rst  multi_turn_text2sql.rst  openenv.rst  training_backends.rst
skyrl-train/docs/getting-started/: development.rst  installation.rst  overview.rst  quickstart.rst  runpod.rst
skyrl-train/docs/recipes/: overview.rst  skyrl-sql.rst
skyrl-train/docs/troubleshooting/: troubleshooting.rst
skyrl-train/docs/tutorials/: async.rst  fully_async.rst  modal.rst  new_env.rst  skypilot.rst  skyrl_gym_generator.rst  tools_guide.rst
skyrl-train/examples/: README.md
skyrl-train/sandboxes/: .gitignore  pyproject.toml
skyrl-train/scripts/: multi_node_nccl_test.py  tbench_docker_install.sh  test_s3.py  test_s3_delete.py  test_s3_io.py
skyrl-train/skyrl_train/: env_vars.py  evaluate.py  fully_async_trainer.py  model_wrapper.py  models.py  sft_trainer.py  trainer.py  training_batch.py  weights_manager.py
skyrl-tx/: .gitignore  README.md  mkdocs.yml  piglatin.py  pyproject.toml  quick_check.py
skyrl-tx/.github/workflows/: pytest.yaml
skyrl-tx/benchmarks/: bench_forward_backward.py  benchmark_engine.py  benchmark_memory.py
skyrl-tx/ci/: gpu_ci_run.sh
skyrl-tx/docs/: contributing.md  index.md  reference.md
skyrl-tx/docs/running/: gpus.md  tpus.md
skyrl-tx/tests/: README.md
skyrl-tx/tests/gpu/: test_attention.py
skyrl-tx/tests/layers/: test_ragged_dot.py
skyrl-tx/tests/models/: test_deepseekv3.py  test_deepseekv3_lora_training.py  test_llama3.py  test_llama3_lora_training.py  test_models_common.py  test_qwen3.py  test_qwen3_config.py  test_qwen3_generate.py  test_qwen3_lora_training.py  test_qwen3_torch.py
skyrl-tx/tests/tinker/: test_api.py  test_db.py  test_engine.py  test_grad_acc.py  test_jax_backend.py
skyrl-tx/tests/torch/models/: test_qwen3.py
skyrl-tx/tests/utils/: test_generator.py  test_logits_processor.py  test_models.py  test_storage.py
skyrl-tx/tx/layers/: layernorm.py  logits_processor.py  lora.py  rotary_embedding.py  util.py
skyrl-tx/tx/loaders/: __init__.py  chat.py  text.py
skyrl-tx/tx/models/: __init__.py  configs.py  deepseekv3.py  llama3.py  mnist.py  outputs.py  qwen3.py  types.py
skyrl-tx/tx/run/: main.py  train.py
skyrl-tx/tx/tinker/: api.py  config.py  db_models.py  engine.py  loss_fns.py  models.py  types.py
skyrl-tx/tx/tinker/alembic/: env.py
skyrl-tx/tx/tinker/backends/: __init__.py  backend.py  jax.py  skyrl_train.py  utils.py
skyrl-tx/tx/tinker/extra/: __init__.py  external_inference.py  skyrl_inference.py  skyrl_training.py
skyrl-tx/tx/torch/layers/: lora.py  util.py
skyrl-tx/tx/torch/models/: __init__.py  outputs.py  qwen3.py
skyrl-tx/tx/torch/utils/: generator.py
skyrl-tx/tx/utils/: generator.py  log.py  logits_processor.py  models.py  storage.py
(+417 files in other folders)
